Sun Aug 10 12:18:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* mkmodules.c: Update comment with more reasons why having
	CVSROOT/passwd be a regular administrative file would be a Bad
	Idea.

	* server.c (switch_to_user): Add comment about checking for errors
	from setuid and friends.

Wed Aug  6 13:48:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add comment about errors writing CVS/Root in
	need_to_create_root code.

Tue Aug  5 22:05:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* entries.c (write_entries): If trouble writing Entries.Backup,
	make it a warning not an error.

Wed Jul 30 08:42:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* parseinfo.c (parse_config): If AUTH_SERVER_SUPPORT is not
	defined, don't set system_auth.

	* version.c: Change version number to 1.9.15.

	* Version 1.9.14.

	* create_adm.c, cvs.h (Create_Admin): If new argument WARN is set,
	then make creating the CVS directory itself a warning not a fatal
	error.  New return value indicates whether we did this.
	* checkout.c (build_one_dir), client.c (call_in_directory):
	Pass WARN as one.
	* add.c, client.c, checkout.c, modules.c, update.c: Pass WARN as
	zero for all other Create_Admin callers.
	* sanity.sh (toplevel): New test toplevel-12 tests for this fix.
	* filesubr.c (mkdir_if_needed): Also check EACCES/isdir.  Needed
	to make toplevel-12 test work.

	* sanity.sh (toplevel): New test toplevel-11 and friends test for
	another variation of the toplevel-9 bug.

Tue Jul 29 12:11:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): Revert this change.  The
	main reason is procedural; Karl is not a current CVS developer.
	The other thing is that the new text doesn't say anything about
	HOMEDRIVE and HOMEPATH.

Tue Jul 29 11:36:22 1997  Karl Fogel  <kfogel@harvey.cyclic.com>

	* login.c (construct_cvspass_filename): error message informs user
	she may need to set HOME environment variable by hand.
