@@ -1,5 +1,7 @@
 Sun Aug 10 12:18:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* sanity.sh (importb): New tests test "cvs import -b".
+
 	* mkmodules.c: Update comment with more reasons why having
 	CVSROOT/passwd be a regular administrative file would be a Bad
 	Idea.
